* 0.4.1:
  - Fix a bug in the resolver store that would result in ghost columns remaining in the browser even after data was removed. Enhanced tests to cover the columns method.
  - Fix a bug in resolver store that would result in a list of a path with a trailing slash recursively listing all children. While this might seem useful it wouldn't work in a hierarchical cluster, so the easiest thing to do is remove it. In any case for a large server it could be quite a bit more dangerous than a simple list, especially if triggered accidentally.
  - Change the way null is published in the shell publisher such that it is possible to publish a string "null", sorry :facepalm:.
  - Fix subscriber connection might decide it's idle and disconnect when there are pending subscription requests in it's queue. subscriber will now disconnect immediatly when the last subscription is unsubscribed and there are no queued subscriptions.

* 0.4.0:
  - protocol breaking changes (additions). 0.4 will be the last non backwards compatible protocol, from here on protocol breaking changes will introduce a new protocol version, and new library versions will be able to speak to old clients using at least one protocol version less than the current one.
  - allow publisher to unicast to specific subscribers
  - writes can return success or failure instead of silently eating errors. This behavior is not mandatory, as it has a performance impact.
  - netidx browser is now a separate binary from the tools
  - netidx browser "views", publishable and editable custom guis
  - subscriber will notify explicitly when a subscription is unsubscribed. This imposes minimal to no overhead due to rust being awesome
  - simplify durable subscriber, shrink it's memory usage a couple of words per subscription
  - eliminate a race between durable subscriber subscription state and updates. Facepalm averted.
  - add many useful value types, e.g. Result, DateTime, Duration