@@ -5,7 +5,7 @@ use netidx::{
     path::Path,
     publisher::{BindCfg, Publisher, Typ, Val, Value},
     resolver::Auth,
-    utils::{self, BatchItem, Batched},
+    utils,
 };
 use std::{collections::HashMap, convert::From, time::Duration};
 use tokio::{
@@ -20,62 +20,53 @@ pub(crate) fn run(config: Config, bcfg: BindCfg, timeout: Option<u64>, auth: Aut
         let mut published: HashMap<Path, Val> = HashMap::new();
         let publisher =
             Publisher::new(config, auth, bcfg).await.expect("creating publisher");
-        let mut lines = Batched::new(BufReader::new(stdin()).lines(), 1000);
-        let mut batch = Vec::new();
-        while let Some(l) = lines.next().await {
-            match l {
-                BatchItem::InBatch(l) => {
-                    batch.push(match l {
-                        Err(_) => break,
-                        Ok(l) => l,
-                    });
-                }
-                BatchItem::EndBatch => {
-                    for line in batch.drain(..) {
-                        let mut m = utils::splitn_escaped(&*line, 3, '\\', '|');
-                        let path = try_cf!(
-                            "missing path",
-                            continue,
-                            m.next().ok_or_else(|| anyhow!("missing path"))
-                        );
-                        let typ_or_null = try_cf!(
-                            "missing type",
-                            continue,
-                            m.next().ok_or_else(|| anyhow!("missing type"))
-                        );
-                        let val = if typ_or_null == "null" {
-                            Value::Null
-                        } else {
-                            let typ = try_cf!(
-                                "invalid type",
-                                continue,
-                                typ_or_null.parse::<Typ>()
-                            );
-                            let v = try_cf!(
-                                "missing value",
-                                continue,
-                                m.next().ok_or_else(|| anyhow!("malformed data"))
-                            );
-                            try_cf!("parse val", continue, typ.parse(v))
-                        };
-                        match published.get(path) {
-                            Some(p) => {
-                                p.update(val);
-                            }
-                            None => {
-                                let path = Path::from(String::from(path));
-                                let publ = try_cf!(
-                                    "failed to publish",
-                                    continue,
-                                    publisher.publish(path.clone(), val)
-                                );
-                                published.insert(path, publ);
-                            }
-                        }
+        let mut buf = String::new();
+        let mut stdin = BufReader::with_capacity(4 * 1024 * 1024, stdin());
+        while let Ok(len) = stdin.read_line(&mut buf).await {
+            if len == 0 {
+                break;
+            }
+            {
+                let mut m = utils::splitn_escaped(buf.as_str(), 3, '\\', '|');
+                let path = try_cf!(
+                    "missing path",
+                    continue,
+                    m.next().ok_or_else(|| anyhow!("missing path"))
+                );
+                let typ_or_null = try_cf!(
+                    "missing type",
+                    continue,
+                    m.next().ok_or_else(|| anyhow!("missing type"))
+                );
+                let val = if typ_or_null == "null" {
+                    Value::Null
+                } else {
+                    let typ =
+                        try_cf!("invalid type", continue, typ_or_null.parse::<Typ>());
+                    let v = try_cf!(
+                        "missing value",
+                        continue,
+                        m.next().ok_or_else(|| anyhow!("malformed data"))
+                    );
+                    try_cf!("parse val", continue, typ.parse(v))
+                };
+                match published.get(path) {
+                    Some(p) => {
+                        p.update(val);
                     }
-                    try_cf!("flush failed", continue, publisher.flush(timeout).await);
+                    None => {
+                        let path = Path::from(String::from(path));
+                        let publ = try_cf!(
+                            "failed to publish",
+                            continue,
+                            publisher.publish(path.clone(), val)
+                        );
+                        published.insert(path, publ);
+                    }
                 }
             }
+            buf.clear();
+            try_cf!("flush failed", continue, publisher.flush(timeout).await);
         }
         // run until we are killed even if stdin closes or ends
         future::pending::<()>().await;
